fix: hide ugly scrollbars

--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -4,6 +4,13 @@
     width: auto;
     height: fit-content;
     outline: 1px solid blue;
+
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 #gantt {
